contrast error fixes

--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -71,7 +71,7 @@
 
   .join-button {
     background-color: #6e9c2f;
-    color: white;
+    color: blue;
     border: none;
     border-radius: 15px;
     box-shadow: 2px 2px 6px white;
